<resources>
    <string name="app_name">Tabd Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email (optional)</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="note_hint">Include a note</string>
    <string name="send_tab_text">Send Tab</string>
    <string name="send_to_queue_button_text">Send To Queue</string>
    <string name="tab_all_button_text">Tab All</string>

    <string-array name="friends">
        <item>maxwellicus</item>
        <item>aviaviavi</item>
        <item>k</item>
        <item>JackOfSlayers</item>
        <item>Soupie</item>
        <item>JerRules</item>
    </string-array>

</resources>
