<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username_edittext"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tabdWhite"
        android:textColorHint="@color/tabdGrey"
        android:layout_marginLeft="@dimen/content_horizontal_margin"
        android:layout_marginRight="@dimen/content_horizontal_margin"
        />

    <EditText
        android:id="@+id/password_edittext"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tabdWhite"
        android:textColorHint="@color/tabdGrey"
        android:layout_marginLeft="@dimen/content_horizontal_margin"
        android:layout_marginRight="@dimen/content_horizontal_margin"
        />

    <EditText
        android:id="@+id/password_edittext"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHighlight="#aaaaaa"
        android:textColorHint="#aaaaaa"
        android:layout_marginLeft="@dimen/content_horizontal_margin"
        android:layout_marginRight="@dimen/content_horizontal_margin"
        />

    <EditText
        android:id="@+id/username_edittext"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHighlight="#aaaaaa"
        android:textColorHint="#aaaaaa"
        android:layout_marginLeft="@dimen/content_horizontal_margin"
        android:layout_marginRight="@dimen/content_horizontal_margin"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        tools:context="tabd.tabdandroid.LoginActivity"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/back_button"
            android:background="@color/tabdGreen"
            android:textColor="@color/tabdBlack"
            android:layout_weight="1"
            android:onClick="goToLogin"
            android:layout_marginLeft="@dimen/content_horizontal_margin" />

        <View
            android:layout_width="@dimen/content_horizontal_margin"
            android:layout_height="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/register_button"
            android:background="@color/tabdGreen"
            android:textColor="@color/tabdBlack"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/content_horizontal_margin"/>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>