<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_send_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/tabdBlack"
    tools:context="tabd.tabdandroid.SendTabActivity">

    <android.support.v7.widget.Toolbar
        app:theme="@style/ThemeToolbar"
        android:id="@+id/my_toolbar"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/tabdBlack"
        android:elevation="4dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/content_horizontal_margin" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/send_tab_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        tools:context="tabd.tabdandroid.LoginActivity"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_queue_button_text"
            android:id="@+id/send_to_queue_button"
            android:background="@color/tabdGreen"
            android:textColor="@color/tabdBlack"
            android:layout_weight="1"
            android:onClick="sendToQueue"
            android:layout_marginLeft="@dimen/content_horizontal_margin" />

        <View
            android:layout_width="@dimen/content_horizontal_margin"
            android:layout_height="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_all_button_text"
            android:id="@+id/tab_all_button"
            android:background="@color/tabdGreen"
            android:textColor="@color/tabdBlack"
            android:layout_weight="1"
            android:onClick="tabAll"
            android:layout_marginRight="@dimen/content_horizontal_margin"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/content_horizontal_margin" />

    <fragment
        android:id="@+id/friends_fragment"
        android:name="tabd.tabdandroid.FriendsListFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="@dimen/content_horizontal_margin"
        android:layout_marginRight="@dimen/content_horizontal_margin"
/>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/content_horizontal_margin" />

    <EditText
        android:id="@+id/note_edittext"
        android:hint="@string/note_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tabdWhite"
        android:textColorHint="@color/tabdGrey"
        android:layout_marginLeft="@dimen/content_horizontal_margin"
        android:layout_marginRight="@dimen/content_horizontal_margin"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/content_horizontal_margin" />

</LinearLayout>